# alphageometry-ascent

./: .gitignore  Cargo.toml  README.md  ar.py  constructions.py  dd.py  elimination.py  geogebra.py  problem.py  pyproject.toml  read_in_relations.py  relations.py  solve.py
examples/: geometry_deductions.py  graph_example.py
problems/asa_sim1/: problem.ggb  problem.txt
problems/contri_asa/: problem.txt
problems/contri_sas/: problem.txt
problems/contri_sss/: problem.ggb  problem.txt
problems/iso_triangle/: problem.ggb  problem.txt
problems/para_trans/: problem.ggb  problem.txt
problems/pset2_1/: info.md  problem.ggb  problem.txt
problems/pset2_2/: info.md  problem.ggb  problem.txt
problems/pset4_1/: info.md  problem.txt
problems/pset4_2/: info.md  problem.ggb  problem.txt
problems/simtri_aa/: problem.txt
problems/worksheet_1/: problem.txt
problems/worksheet_11/: problem.ggb  problem.txt
problems/worksheet_2/: problem.ggb  problem.txt
problems/worksheet_3/: problem.ggb  problem.txt
problems/worksheet_5/: problem.txt
problems/worksheet_6/: problem.ggb  problem.txt
python/ascent_py/: __init__.py  geometry_deductions.py
src/: lib.rs
