[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ascent-py"
version = "0.1.0"
description = "Python bindings for Ascent Datalog"
requires-python = ">=3.8,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "matplotlib>=3.7.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
